lagt til css til hjemmesiden

--- a/src/modules/map/mapApplicationcss.css
+++ b/src/modules/map/mapApplicationcss.css
@@ -1,18 +1,10 @@
-* {
-  margin: unset;
-}
 
-nav,
-main,
-.mapContainer,
+
+main,.mapContainer,
 aside {
   margin: 1rem;
 }
 
-nav {
-  display: flex;
-  gap: 1rem;
-}
 
 main {
   display: grid;
