--- a/src/components/shared/Navbarstyling.css
+++ b/src/components/shared/Navbarstyling.css
@@ -1,32 +1,51 @@
 .navbar-container {
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 1rem;
+  background-color: #f5d1bb;
+  box-sizing: border-box;
+  position: relative;
 }
 .nav-links {
   display: flex;
-  list-style: none;
+  list-style-type: none;
+
 }
 
 .myName {
   color: #764415;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  font-size: 2.5rem;
+  margin-right: auto;
+
 }
 
 li {
-  display: flex;
-  width: 300px;
-  height: 60px;
-  justify-content: center;
-  align-items: center;
+  margin: 0 10px;
+  font-size: 1.5rem;
+  padding: 10px;
 }
+
 a {
   text-decoration: none;
-  color: black;
+  color: #764415;
+  transition: all ease .4s;
 }
 a:hover {
-  color: blueviolet;
+  color: #EC5F55;
+}
+
+/*  Media Query  */
+@media screen and (max-width: 768px) {
+  .navbar-container {
+    flex-direction: column;
+    padding: 10px;
+  }
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
+  }
+  li {
+    margin: 10px 0;
+  }
 }
