--- a/src/styling/homePageStyle.css
+++ b/src/styling/homePageStyle.css
@@ -75,7 +75,7 @@
     width: 186px;
     border-radius: 20px;
     background: #EC5F55;
-    box-shadow: 0px 4px 4px 0px rgba(125, 69, 62, 0.35);
+    box-shadow: 0 4px 4px 0 rgba(125, 69, 62, 0.35);
 
     color: #FFF;
     text-align: center;
