--- a/src/styling/homePageStyle.css
+++ b/src/styling/homePageStyle.css
@@ -1,121 +1,115 @@
 * {
-    margin: unset;
+  margin: unset;
 }
 
 .grid-container {
-    background: rgba(245, 209, 187, 0.22);
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 10px;
-
+  background: rgba(245, 209, 187, 0.22);
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 10px;
 }
 
 .section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .section1 {
-    grid-column: span 12;
-    height: 50vh;
-    background: #f5d1bb;
+  grid-column: span 12;
+  height: 50vh;
+  background: #f5d1bb;
 }
 
-.section2{
-    height: 20vh;
+.section2 {
+  height: 20vh;
 }
 
 .section3 {
-    grid-column: span 12;
-    height: 45vh;
-    background: #C5D2E3;
+  grid-column: span 12;
+  height: 45vh;
+  background: #c5d2e3;
 }
 
-
-.section4{
-    grid-column: span 12;
-
+.section4 {
+  grid-column: span 12;
 }
 .offer-text {
-    color: #6A5ACD;
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: normal;
+  color: #6a5acd;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 510;
+  line-height: normal;
 }
 .banner {
-    grid-column: span 12;
-    grid-row: span 2;
-    height: 40vh;
-    background: #F5D1BB;
+  grid-column: span 12;
+  grid-row: span 2;
+  height: 40vh;
+  background: #f5d1bb;
 }
 
 .intro-1 {
-    width: 186px;
-    height: 24px;
+  width: 186px;
+  height: 24px;
 
-    color: #764415;
-    font-size: 20px;
-    font-weight: 500;
-
+  color: #764415;
+  font-size: 20px;
+  font-weight: 500;
 }
 .intro-2 {
-    width: 352px;
-    height: 96px;
+  width: 352px;
+  height: 96px;
 
-
-    color: #764415;
-    font-size: 40px;
-    font-weight: 500;
+  color: #764415;
+  font-size: 40px;
+  font-weight: 500;
 }
 .get-in-touch-button {
-    height: 48px;
-    width: 186px;
-    border-radius: 20px;
-    background: #EC5F55;
-    box-shadow: 0 4px 4px 0 rgba(125, 69, 62, 0.35);
+  height: 48px;
+  width: 186px;
+  border-radius: 20px;
+  background: #ec5f55;
+  box-shadow: 0 4px 4px 0 rgba(125, 69, 62, 0.35);
 
-    color: #FFF;
-    text-align: center;
-    font-size: 17px;
-    font-weight: 500;
-    border: none;
+  color: #fff;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 500;
+  border: none;
 }
 .headline {
-    color: #EC5F55;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  color: #ec5f55;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .words-about-me {
-    width: 321px;
-    height: 96px;
-    flex-shrink: 0;
+  width: 321px;
+  height: 96px;
+  flex-shrink: 0;
 
-    color: #622D26;
-    text-align: center;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: normal;
+  color: #622d26;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 510;
+  line-height: normal;
 }
 .about-me-button {
-    width: 169px;
-    height: 36px;
-    flex-shrink: 0;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border: none;
-    border-radius: 20px;
-    background: #EC5F55;
+  width: 169px;
+  height: 36px;
+  flex-shrink: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border: none;
+  border-radius: 20px;
+  background: #ec5f55;
 
-    color: #FFF;
-    text-align: center;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: normal;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 510;
+  line-height: normal;
 }
