--- a/src/styling/homePageStyle.css
+++ b/src/styling/homePageStyle.css
@@ -1,12 +1,19 @@
 * {
-  margin: unset;
+  box-sizing: border-box;
+}
+.container-fluid, .row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.col-sm-12 {
+  grid-column: auto / span 12;
 }
 
 .grid-container {
   background: rgba(245, 209, 187, 0.22);
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .section {
@@ -31,7 +38,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20%;
+  height: 100%;
 }
 
 /* --  INTRO TEXT  -- */
@@ -65,11 +72,13 @@
   border: none;
 }
 .image1 {
-  height: 25em;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .section2 {
   height: 20vh;
+  grid-column: span 12;
 }
 
 .section3 {
