--- a/src/components/Home/homePageStyle.css
+++ b/src/components/Home/homePageStyle.css
@@ -83,9 +83,31 @@
 }
 
 .section3 {
+  display: flex;
+  align-items: center;
   grid-column: span 12;
   height: 45vh;
   background: #c5d2e3;
+}
+.rainbowImage {
+  max-width: 100%;
+  max-height: 100%;
+  border: 14px solid #ffffff;
+  border-radius: 10px;
+}
+.left-content3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 30px;
+}
+
+.right-content3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .section4 {
